# zero-to-production-in-rust

./: Cargo.toml  Dockerfile  LICENSE  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-2a8d1133af69f9612e1c307af4159937f618179572ee877697411e0dc25fc7c8.json  query-3b6dd10aa73467c3635f9161052f42a80790183f293b116ea4eb194f2faf19c0.json  query-3db2f41eb04c91097c76127da061bfa7bd76a30e0e97a2a123230963072bda5d.json  query-4e1e3e18962092fb9e2126928b0892472f93c256566d22d49dbac26c58ee162c.json  query-53654c478c44fd39dcdaf34ce03c2c0a182d6c0b2afe26205a79ba0b373f99d4.json  query-8e4eadce0ebffc3a7df646bb7ff89ea982a1e3cd6c98a89ddbbe4724df140a89.json  query-acf69f398e8d3e9791c60f78e66432cac9c75d56e333ddd04a737bb0f80cff72.json  query-ae259de9571216590c35a8b242ae7825faf2208e9e3f7fa78db52795b8875a41.json  query-c6f2f9eb44bc4a37ded81dc05fb251827709d2458172cfacaa3e49e2f2cc94cb.json  query-e08d46b29ac808f7173f44fea8ee4601b3ceb61b371ef1350292f3a02f3407c2.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240304151209_make_status_not_null_in_subscriptions.sql  20240905200517_add_user_roles.sql  20240905200526_add_role_to_users.sql  20240905201018_assign_admin_role_to_seed_user.sql  20240905201253_make_user_role_not_null.sql  20240905202046_create_collaborator_tokens_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  template.rs  user_role.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: collaborator_email.rs  email.rs  invitation_token.rs  new_collaborator.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs  token.rs  validation_code.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: collaborator_invitation.rs  dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: post.rs
src/routes/collaborator/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
src/routes/newsletters/: get.rs  mod.rs  post.rs
templates/: collaborator_invitation.html  subscription_confirmation.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  collaborators.rs  collaborators_registration.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
