[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[profile.release]
strip = true
lto = true

[dependencies]
urlencoding = "2"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = { version = "0.1", features = ["log"] }
config = { git = "https://github.com/mehcode/config-rs.git" }
actix-web = "4.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
unicode-segmentation = "1"
validator = { version = "0.16.1", default-features = false }
url = "2.5"
rand = { version = "0.8.5", features = ["std_rng"] }
tera = "1"
lazy_static = "1.4.0"
thiserror = "1"
anyhow = "1.0"
base64 = "0.22"
argon2 = { version = "0.5", features = ["std"] }
htmlescape = "0.3"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
serde_json = "1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
once_cell = "1"
claims = "0.7.1"
fake = "2.9.2"
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
